Change service type to LoadBalancer.

--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -15,4 +15,4 @@ spec:
     # accessible through the service IP and port.
     run: reboot-api
   sessionAffinity: None
-  type: ClusterIP
+  type: LoadBalancer
