--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -7,9 +7,14 @@ metadata:
   namespace: default
 spec:
   ports:
+  # We need both the HTTP and the HTTPS ports as autocert must be able
+  # to handle incoming http-01 challenges. These will only be made on port 80.
   - port: 8080
     protocol: TCP
     targetPort: 8080
+  - port: 80
+    protocol: TCP
+    targetPort: 80
   selector:
     # Pods with labels matching this key/value pair will be publically
     # accessible through the service IP and port.
