--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -1,25 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    prometheus.io/scrape: 'true'
-  name: reboot-api-service
+  name: reboot-api-tls-service
   namespace: default
 spec:
   ports:
-  # We need both the HTTP and the HTTPS ports as autocert must be able
-  # to handle incoming http-01 challenges. These will only be made on port 80.
-  - name: https
-    port: 8080
+  - port: 8080
     protocol: TCP
     targetPort: 8080
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
   selector:
     # Pods with labels matching this key/value pair will be publically
     # accessible through the service IP and port.
     run: reboot-api
   sessionAffinity: None
-  type: LoadBalancer
+  type: NodePort
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: reboot-api-tls
+  namespace: default
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
+spec:
+  tls:
+  - hosts:
+    - reboot.{{GCLOUD_PROJECT}}.measurementlab.net
+    secretName: prometheus-tls
+  rules:
+  - host: prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: reboot-api-tls-service
+          servicePort: 8080
