s/prometheus/reboot-api/g.

--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -27,9 +27,9 @@ spec:
   tls:
   - hosts:
     - reboot.{{GCLOUD_PROJECT}}.measurementlab.net
-    secretName: prometheus-tls
+    secretName: reboot-api-tls
   rules:
-  - host: prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
+  - host: reboot.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
       - path: /
