--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -763,7 +763,7 @@ groups:
     expr: |
       bq_ndt_annotation_success / bq_ndt_annotation_total < 0.98
         or absent(bq_ndt_annotation_success) or absent(bq_ndt_annotation_total)
-        or absent(bq_ndt_annotation_success / bq_ndt_annotation_total)
+          or absent(bq_ndt_annotation_success / bq_ndt_annotation_total)
     for: 30m
     labels:
       repo: dev-tracker
@@ -776,7 +776,9 @@ groups:
 # Gardener_ParseTimeDifferenceTooOld fires when the maximum and minimum
 # parse_time values for each data set are greater than 80 days.
   - alert: Gardener_ParseTimeDifferenceTooOld
-    expr: absent(bq_gardener_parse_time_difference_days) or bq_gardener_parse_time_difference_days > 80
+    expr: |
+      absent(bq_gardener_parse_time_difference_days)
+        or bq_gardener_parse_time_difference_days > 80
     for: 10m
     labels:
       repo: dev-tracker
