Add scrape: 'true'.

--- a/k8s/prometheus-federation/deployments/rebot.yml
+++ b/k8s/prometheus-federation/deployments/rebot.yml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         run: rebot
+      annotations:
+        prometheus.io/scrape: 'true'
     spec:
       containers:
       - name: rebot
