Pin Rebot's version to v0.1.0.

--- a/k8s/prometheus-federation/deployments/rebot.yml
+++ b/k8s/prometheus-federation/deployments/rebot.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: rebot
-        image: measurementlab/rebot:latest
+        image: measurementlab/rebot:v0.1.0
         args:
           - "-project={{GCLOUD_PROJECT}}"
           - "-reboot.username={{REBOOTAPI_USER}}"
