--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -17,12 +17,12 @@ spec:
     spec:
       # Do an early fetch of the configuration so that snmp-exporter will start
       initContainers:
-      - name: fetch
-        image: gcr.io/cloud-builders/gsutil
+      - name: gcs-downloader-once
+        image: measurementlab/gcs-downloader:v0.1
         args:
-        - cp
-        - gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
-        - /config/snmp.yml
+        - -source gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
+        - -output /config/snmp.yml
+        - -once
         volumeMounts:
         - mountPath: /config
           name: snmp-exporter-storage
@@ -34,14 +34,13 @@ spec:
         volumeMounts:
         - mountPath: /etc/snmp_exporter
           name: snmp-exporter-storage
-      # Pull the snmp-exporter configuration again so that we can watch it.
-      # TODO: replace this bash-loop with a special-purpose container.
-      - name: service-discovery
-        image: gcr.io/cloud-builders/gsutil
-        command:
-        - bash
-        - -c
-        - "while true; do gsutil cp gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml /config/snmp.yml ; sleep 600 ; done"
+      # Pull the snmp-exporter configuration from GCS every 5 minutes.
+      - name: gcs-downloader
+        image: measurementlab/gcs-downloader:v0.1
+        args:
+        - -source gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
+        - -output /config/snmp.yml
+        - -period 5
         resources:
           requests:
             memory: "150Mi"
