--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -21,14 +21,16 @@ spec:
         image: measurementlab/gcs-downloader:v0.1
         args:
         - -source=gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
-        - -output=/config/snmp.yml
+        - -output=/config
         - -once
         volumeMounts:
         - mountPath: /config
           name: snmp-exporter-storage
       containers:
-      - image: prom/snmp-exporter:v0.13.0
-        name: snmp-exporter
+      - name: snmp-exporter
+        image: prom/snmp-exporter:v0.13.0
+        args:
+        - -config.file=/etc/snmp_exporter/snmp_exporter_config.yaml
         ports:
         - containerPort: 9116
         volumeMounts:
@@ -39,7 +41,7 @@ spec:
         image: measurementlab/gcs-downloader:v0.1
         args:
         - -source=gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
-        - -output=/config/snmp.yml
+        - -output=/config
         - -period=5
         resources:
           requests:
