--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -30,7 +30,7 @@ spec:
       - name: snmp-exporter
         image: prom/snmp-exporter:v0.13.0
         args:
-        - -config.file=/etc/snmp_exporter/snmp_exporter_config.yaml
+        - --config.file=/etc/snmp_exporter/snmp_exporter_config.yaml
         ports:
         - containerPort: 9116
         volumeMounts:
