Adds unit 'm' to gcs-downloader -period flag value.

--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -42,7 +42,7 @@ spec:
         args:
         - -source=gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
         - -output=/config
-        - -period=5
+        - -period=5m
         resources:
           requests:
             memory: "150Mi"
