Specifies a container port of 9990 so that Prometheus will auto discover the gcs-downloader container and scrape it.

--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -43,6 +43,8 @@ spec:
         - -source=gs://switch-config-{{GCLOUD_PROJECT}}/snmp_exporter_config.yaml
         - -output=/config
         - -period=5m
+        ports:
+        - containerPort: 9990
         resources:
           requests:
             memory: "150Mi"
