Try preventing two snmp-exporter pods to run on the same node.

--- a/k8s/prometheus-federation/deployments/snmp-exporter.yml
+++ b/k8s/prometheus-federation/deployments/snmp-exporter.yml
@@ -15,6 +15,16 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: run
+                operator: In
+                values:
+                - snmp-exporter
+            topologyKey: kubernetes.io/hostname
       # Do an early fetch of the configuration so that snmp-exporter will start
       initContainers:
       - name: gcs-downloader-once
