Add relabeling to cloud nodes, too.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -464,7 +464,7 @@ scrape_configs:
 
     metric_relabel_configs:
       - source_labels: [machine]
-        regex: mlab[1-4c]\.([a-z]{3}[0-9t]{2}).+
+        regex: mlab[1-4c]\.([a-z]{3}[0-9tc]{2}).+
         target_label: site
         replacement: $1
 
