--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -462,6 +462,14 @@ scrape_configs:
         target_label: __address__
         replacement: blackbox-service.default.svc.cluster.local:9115
 
+    # This metric relabel config adds the "site" label on blackbox-exporter
+    # targets.
+    # TODO: retire this in favor of adding the label at target generation time.
+    metric_relabel_configs:
+      - source_labels: [machine]
+        regex: mlab[1-4]\.([a-z]{3}[0-9tc]{2}).+
+        target_label: site
+        replacement: $1
 
   # Blackbox configurations for IPv6 probes.
   #
