--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -355,6 +355,12 @@ scrape_configs:
     static_configs:
       - targets: ['epoxy-boot-api.{{PROJECT}}.measurementlab.net:9000']
 
+  # Scrape config for the node_exporter on the IPv6 Linode VM we use for
+  # monitoring IPv6.
+  - job_name: 'ipv6-node-exporter'
+    static_configs:
+      - targets: ['blackbox-exporter-ipv6.mlab-oti.measurementlab.net:9100']
+
   # Scrape config for federation.
   #
   # The '/federate' target allows retrieving a set of timeseries from other
