Uses the {{PROJECT}} variable in the scrape config for the IPv6 VM.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -359,7 +359,7 @@ scrape_configs:
   # monitoring IPv6.
   - job_name: 'ipv6-node-exporter'
     static_configs:
-      - targets: ['blackbox-exporter-ipv6.mlab-oti.measurementlab.net:9100']
+      - targets: ['blackbox-exporter-ipv6.{{PROJECT}}.measurementlab.net:9100']
 
   # Scrape config for federation.
   #
