Add containerPort:9990 to expose Prometheus metrics.

--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -30,3 +30,4 @@ spec:
                 "--enable-inmemory={{GITHUB_RECEIVER_INMEMORY}}" ]
         ports:
         - containerPort: 9393
+        - containerPort: 9990
