--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -30,6 +30,7 @@ spec:
                 "--label=in progress",
                 "--enable-inmemory={{GITHUB_RECEIVER_INMEMORY}}" ]
         ports:
+        # TODO: receiver and metrics should be available on the same port.
         - containerPort: 9393
           name: receiver
         - containerPort: 9990
