Modifies Grafana data sources for the platform cluster to use the new Prometheus domains, and configures the prometheus-federation federation scrape job to also use the new domain name.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -319,7 +319,7 @@ scrape_configs:
         - 'kube_deployment_status_replicas'
         - 'kube_deployment_spec_replicas'
     static_configs:
-      - targets: ['k8s-prometheus.{{PROJECT}}.measurementlab.net:9090']
+      - targets: ['prometheus-platform-cluster.{{PROJECT}}.measurementlab.net:9090']
         labels:
           cluster: "platform-cluster"
 
