--- a/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
@@ -4,7 +4,7 @@ apiVersion: 1
 # list of datasources to insert/update depending
 # what's available in the database
 datasources:
-- name: k8s platform (mlab-oti)
+- name: Platform Cluster (mlab-oti)
   type: prometheus
   access: proxy
   orgId: 1
