Add containerPort:9990 to expose Prometheus metrics (#492)
* Add containerPort:9990 to expose Prometheus metrics.

* Name ports + scrape 9990 only.

* Add TODO.

--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -13,6 +13,7 @@ spec:
         run: github-receiver
       annotations:
         prometheus.io/scrape: 'true'
+        prometheus.io/port: '9990'
     spec:
       containers:
       - name: github-receiver
@@ -29,4 +30,8 @@ spec:
                 "--label=in progress",
                 "--enable-inmemory={{GITHUB_RECEIVER_INMEMORY}}" ]
         ports:
+        # TODO: receiver and metrics should be available on the same port.
         - containerPort: 9393
+          name: receiver
+        - containerPort: 9990
+          name: metrics
