--- a/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
@@ -4,11 +4,11 @@ apiVersion: 1
 # list of datasources to insert/update depending
 # what's available in the database
 datasources:
-- name: k8s platform (mlab-sandbox)
+- name: Platform Cluster (mlab-oti)
   type: prometheus
   access: proxy
   orgId: 1
-  url: http://k8s-prometheus.mlab-sandbox.measurementlab.net:9090
+  url: http://k8s-prometheus.mlab-oti.measurementlab.net:9090
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: false
