Changes the platform cluster datasource URL for mlab-oti to point to the newly renamed domain name for Prom.

--- a/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-oti.yml.template
@@ -8,7 +8,7 @@ datasources:
   type: prometheus
   access: proxy
   orgId: 1
-  url: http://k8s-prometheus.mlab-oti.measurementlab.net:9090
+  url: http://prometheus-platform-cluster.mlab-oti.measurementlab.net:9090
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: false
