--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -103,6 +103,10 @@ spec:
         - mountPath: /slow-targets
           name: prometheus-storage
           subPath: slow-targets
+        # /bmc-targets should contain BMC target config files.
+        - mountPath: /bmc-targets
+          name: prometheus-storage
+          subPath: bmc-targets
         # /etc/prometheus/prometheus.yml contains the M-Lab Prometheus config.
         - mountPath: /etc/prometheus
           name: prometheus-config
@@ -176,8 +180,8 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets-ipv6/neubot_ipv6.json",
                 "--http-target=/targets/blackbox-targets/switches_ping.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/switches_ping.json",
-                "--http-target=/targets/slow-targets/bmc_e2e-5m.json",
-                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/slow-targets/bmc_e2e-5m.json",
+                "--http-target=/targets/bmc-targets/bmc_e2e.json",
+                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/bmc-targets/bmc_e2e.json",
                 "--project={{GCLOUD_PROJECT}}"]
         ports:
           - containerPort: 9373
