Username is always "reboot".

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -759,7 +759,7 @@ scrape_configs:
         refresh_interval: 5m
 
     basic_auth:
-      - username: {{REBOOTAPI_BASIC_AUTH_USER}}
+      - username: reboot
       - password: {{REBOOTAPI_BASIC_AUTH_PASS}}
 
     # This relabel config is necessary. The relabel config redefines the address
