--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -759,8 +759,8 @@ scrape_configs:
         refresh_interval: 5m
 
     basic_auth:
-      - username: reboot
-      - password: {{REBOOTAPI_BASIC_AUTH_PASS}}
+      username: reboot
+      password: {{REBOOTAPI_BASIC_AUTH_PASS}}
 
     # This relabel config is necessary. The relabel config redefines the address
     # to scrape and sets the correct parameters to pass to the scrape target.
