Set scheme: https.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -757,7 +757,7 @@ scrape_configs:
           - /bmc-targets/*.json
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
-
+    scheme: https
     basic_auth:
       username: reboot
       password: {{REBOOTAPI_BASIC_AUTH_PASS}}
