Actually use the REBOOTAPI_BASIC_AUTH variable.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -765,7 +765,7 @@ scrape_configs:
         refresh_interval: 5m
     scheme: https
     basic_auth:
-      username: reboot
+      username: {{REBOOTAPI_BASIC_AUTH}}
       password: {{REBOOTAPI_BASIC_AUTH_PASS}}
 
     # This relabel config is necessary. The relabel config redefines the address
