Adds two new alerts for changed for lower-than-expected RAM. (#512)
* Adds two new alerts for changed for lower-than-expected RAM.

* Adds two new alerts for uncorrectable and correctable RAM errors (EDAC).

* Removes the not-great alert PlatformHardware_RamAmountChanged alert.

* Adds EDAC correctable and uncorrectable error metrics to the platform cluster federation scrape job.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1206,4 +1206,49 @@ groups:
         bottleneck.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/K8-zAIuik/k8s-master-cluster
 
-# Platform Cluster API server alerts.
+# Platform Hardware alerts
+
+  - alert: PlatformHardware_RamBelowExpected
+    expr: |
+      node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"} / 2^20 < 16000
+    for: 1d
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: System RAM is below the expected minimum value.
+      description: All M-Lab machines have at least 16GB of RAM. The quantity
+        of RAM on one or more machines has gone below 16GB, which may indicate
+        a failed RAM module. Login to the machine and double check
+        the hardware and/or system messages.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
+
+  - alert: PlatformHardware_EdacUncorrectableErrors
+    expr: |
+      node_edac_uncorrectable_errors_total{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"} > 0
+    for: 1d
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: Uncorrectable errors detected in RAM.
+      description: EDAC metrics are reporting uncorrectable memory errors.
+        This may indicate a DIMM module beginning to go bad or an issue with
+        the mainboard. Login to the machine and double check the hardware
+        and/or system messages.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
+
+  - alert: PlatformHardware_EdacCorrectableErrors
+    expr: |
+      node_edac_correctable_errors_total{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"} > 0
+    for: 1d
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: Correctable errors detected in RAM.
+      description: EDAC metrics are reporting correctable memory errors.
+        While correctable, this may indicate some issue with a DIMM module or
+        the mainboard. Login to the machine and double check the hardware
+        and/or system messages.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
