--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -754,8 +754,7 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-  # Scrape BMC targets every 5m (NOTE: do not poll less frequently without
-  # updating the prometheus flag -query.staleness-delta).
+  # Scrape BMC targets every 5m.
   - job_name: 'bmc-targets'
     scrape_interval: 5m
     file_sd_configs:
